Mudanças no estilo

--- a/index02.html
+++ b/index02.html
@@ -1,103 +1,143 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IoT - Pra quê serve </title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <nav>
-        <ul>
-            <li><a href="index.html">1 O que é IoT</a></li>
-            <li><a href="index.html">1.2 Como surgiu</a></li>
-            <li><a href="#terciario">2 Pra quê serve</a></li>
-            <li><a href="#quartenario">2.2 Como usar no seu negócio</a></li>
-            <li><a href="index03.html" target="_blank">3 Aplicação no dia a dia</a></li>
-            <li><a href="index04.html" target="_blank">4 Futuro do IoT</a></li>
-        </ul>
-    </nav>
-    
-
-    <section id="s3">
-        <div id="terciario">
-            <div>
-                <h2>Pra quê serve</h2>
-                <img src="" alt="Imagem sobre pra que server Iot">
-                <p>A Internet das Coisas (IoT) serve para conectar objetos físicos à internet, permitindo que eles coletem, troquem e processem dados automaticamente para facilitar a vida das pessoas, otimizar processos e criar ambientes mais inteligentes. A principal função da IoT é transformar dispositivos comuns em sistemas interconectados capazes de tomar decisões, melhorar a eficiência e gerar novas oportunidades em diferentes setores.
-                <br>
-                <br>
-                Automação e Eficiência
-                <br>
-                Uma das maiores utilidades da IoT é a automação. Por meio de sensores e dispositivos conectados, é possível monitorar e controlar remotamente equipamentos, sistemas e processos. Isso gera maior eficiência no uso de recursos, redução de custos e melhora na produtividade. Por exemplo, em indústrias, a IoT permite a manutenção preditiva de máquinas, evitando falhas e paradas inesperadas.
-                <br>
-                <br>
-                Monitoramento e Controle Remoto
-                <br>
-                A IoT possibilita o monitoramento em tempo real de ambientes, equipamentos e até mesmo pessoas. No setor de saúde, por exemplo, dispositivos vestíveis monitoram sinais vitais remotamente, permitindo intervenções rápidas. Em residências, sistemas inteligentes ajustam a iluminação, temperatura e segurança, proporcionando conforto e economia de energia.
-                <br>
-                <br>
-                Tomada de Decisão Baseada em Dados
-                <br>
-                Com a IoT, grandes volumes de dados são coletados constantemente, permitindo análises detalhadas que ajudam na tomada de decisões mais informadas. Cidades inteligentes utilizam dados coletados para gerenciar melhor o trânsito, iluminação pública e serviços urbanos, melhorando a qualidade de vida dos cidadãos.
-                <br>
-                <br>
-                Melhoria na Qualidade de Vida
-                <br>
-                Além dos benefícios econômicos e produtivos, a IoT impacta diretamente o cotidiano das pessoas. Casas inteligentes, dispositivos para monitoramento de saúde, carros conectados e assistentes virtuais tornam as atividades diárias mais simples, seguras e práticas.
-                <br>
-                <br>
-                <!-- Fonte de Referências
-                Fontes: Atzori, L., Iera, A., & Morabito, G. (2010). The Internet of Things: A survey. Computer Networks, 54(15), 2787-2805. https://doi.org/10.1016/j.comnet.2010.05.010
-
-                Gubbi, J., Buyya, R., Marusic, S., & Palaniswami, M. (2013). Internet of Things (IoT): A vision, architectural elements, and future directions. Future Generation Computer Systems, 29(7), 1645-1660. https://doi.org/10.1016/j.future.2013.01.010
-
-                Miorandi, D., Sicari, S., De Pellegrini, F., & Chlamtac, I. (2012). Internet of things: Vision, applications and research challenges. Ad Hoc Networks, 10(7), 1497-1516. https://doi.org/10.1016/j.adhoc.2012.02.016
-
-                Sharma, A., & Das, S. (2020). Internet of Things: Applications, Challenges and Future Prospects. International Journal of Engineering and Advanced Technology, 9(1), 4850-4857.
-                -->
-            </p>
-            </div>
-        </div>
-    </section>
-
-    <section id="s4">
-        <div id="quartenario">
-            <div>
-                <h2>Como usar no seu negócio</h2>
-                <p>
-                    A Internet das Coisas (IoT) pode transformar profundamente a forma como as empresas operam, oferecendo maior eficiência, segurança e insights estratégicos. Implementar IoT em um negócio começa com a identificação de processos que podem se beneficiar de automação e monitoramento em tempo real. Sensores e dispositivos conectados permitem coletar dados sobre máquinas, produtos, estoque, logística e comportamento do cliente, transformando informações em decisões mais rápidas e precisas.
-                    <br>
-                    <br>
-                    Por exemplo, em indústrias, sensores em equipamentos podem prever falhas antes que aconteçam, reduzindo custos com manutenção corretiva. No varejo, etiquetas RFID e beacons permitem monitorar o fluxo de clientes, otimizando o layout das lojas e melhorando a experiência de compra. Em escritórios e ambientes corporativos, a IoT auxilia no controle de energia, iluminação inteligente e segurança, garantindo economia e sustentabilidade.
-                    <br>
-                    <br>
-                    Além disso, a análise de dados gerados por dispositivos IoT oferece insights valiosos para identificar tendências de consumo, padrões de operação e oportunidades de inovação. Ao integrar IoT com sistemas de gestão e nuvem, empresas conseguem centralizar informações, automatizar processos e aumentar a produtividade.
-                    <br>
-                    <br>
-                    Para aproveitar ao máximo a IoT, é importante começar com projetos piloto, avaliar o retorno sobre o investimento (ROI) e expandir gradualmente, garantindo segurança, privacidade e compatibilidade com os sistemas existentes.</p>
-
-                    <!-- Fontes de Referências
-                     AWS – Internet of Things (IoT): https://aws.amazon.com/pt/what-is/iot/
-
-                    Gubbi, J., Buyya, R., Marusic, S., & Palaniswami, M. (2013). Internet of Things (IoT): A vision, architectural elements, and future directions. Future Generation Computer Systems, 29(7), 1645-1660.
-
-                    Miorandi, D., Sicari, S., De Pellegrini, F., & Chlamtac, I. (2012). Internet of Things: Vision, applications and research challenges. Ad Hoc Networks, 10(7), 1497–1516.
-
-                    Atzori, L., Iera, A., & Morabito, G. (2010). The Internet of Things: A survey. Computer Networks, 54(15), 2787–2805.
-                    -->
-            </div>
-        </div>
-    </section>
-
-    <footer>
+    <div class="cabecalho">
         <div>
-            <div>
-                <p>R. da Guia, 142 - Recife, PE, 50030-210</p>
-                <p>Softex PE</p>
-                <p>&copy;Todos os direitos reservados</p>
-            </div>
+            <h1>Internet das Coisas</h1>
+            <h3>Entenda o que é IoT, descubra como ela surgiu e como você pode
+                aplicar ela na sua empresa e seu cotidiano</h3>
+            <nav>
+                <ul>
+                    <li><a href="index.html">1 O que é IoT</a></li>
+                    <li><a href="index.html">1.2 Como surgiu</a></li>
+                    <li><a href="#terciario">2 Para que serve</a></li>
+                    <li><a href="#quartenario">2.2 Como usar no seu negócio</a></li>
+                    <li><a href="index03.html">3 Aplicação no dia a dia</a></li>
+                    <li><a href="index04.html">4 Futuro do IoT</a></li>
+                    <li><a href="index05.html">5 Referências Bibliográficas</a></li>
+                </ul>
+            </nav>
         </div>
-    </footer>
+    </div>
+
+    <div class="conteudo">
+        <section id="s3">
+            <div id="terciario">
+                <div>
+                    <h2>Para que serve</h2>
+                    <img class="imagem" src="/assets/para_que_serve_iot.png" alt="Para que serve IoT">
+                    <p>
+                        A Internet das Coisas (IoT) serve para conectar objetos físicos à internet, permitindo que eles
+                        coletem, troquem e processem dados automaticamente para facilitar a vida das pessoas, otimizar
+                        processos e criar ambientes mais inteligentes. A principal função da IoT é transformar
+                        dispositivos
+                        comuns em sistemas interconectados capazes de tomar decisões, melhorar a eficiência e gerar
+                        novas
+                        oportunidades em diferentes setores.
+                        <br>
+                        <br>
+                        Automação e Eficiência
+                        <br>
+                        Uma das maiores utilidades da IoT é a automação. Por meio de sensores e dispositivos conectados,
+                        é
+                        possível monitorar e controlar remotamente equipamentos, sistemas e processos. Isso gera maior
+                        eficiência no uso de recursos, redução de custos e melhora na produtividade. Por exemplo, em
+                        indústrias, a IoT permite a manutenção preditiva de máquinas, evitando falhas e paradas
+                        inesperadas.
+                        <br>
+                        <br>
+                        Monitoramento e Controle Remoto
+                        <br>
+                        A IoT possibilita o monitoramento em tempo real de ambientes, equipamentos e até mesmo pessoas.
+                        No
+                        setor de saúde, por exemplo, dispositivos vestíveis monitoram sinais vitais remotamente,
+                        permitindo
+                        intervenções rápidas. Em residências, sistemas inteligentes ajustam a iluminação, temperatura e
+                        segurança, proporcionando conforto e economia de energia.
+                        <br>
+                        <br>
+                        Tomada de Decisão Baseada em Dados
+                        <br>
+                        Com a IoT, grandes volumes de dados são coletados constantemente, permitindo análises detalhadas
+                        que
+                        ajudam na tomada de decisões mais informadas. Cidades inteligentes utilizam dados coletados para
+                        gerenciar melhor o trânsito, iluminação pública e serviços urbanos, melhorando a qualidade de
+                        vida
+                        dos cidadãos.
+                        <br>
+                        <br>
+                        Melhoria na Qualidade de Vida
+                        <br>
+                        Além dos benefícios econômicos e produtivos, a IoT impacta diretamente o cotidiano das pessoas.
+                        Casas inteligentes, dispositivos para monitoramento de saúde, carros conectados e assistentes
+                        virtuais tornam as atividades diárias mais simples, seguras e práticas.
+                        <br>
+                        <br>
+                    </p>
+                </div>
+            </div>
+        </section>
+
+        <section id="s4">
+            <div id="quartenario">
+                <div>
+                    <h2>Como usar no seu negócio</h2>
+                    <p>
+                        A Internet das Coisas (IoT) pode transformar profundamente a forma como as empresas operam,
+                        oferecendo maior eficiência, segurança e insights estratégicos. Implementar IoT em um negócio
+                        começa
+                        com a identificação de processos que podem se beneficiar de automação e monitoramento em tempo
+                        real.
+                        Sensores e dispositivos conectados permitem coletar dados sobre máquinas, produtos, estoque,
+                        logística e comportamento do cliente, transformando informações em decisões mais rápidas e
+                        precisas.
+                        <br>
+                        <br>
+                        Por exemplo, em indústrias, sensores em equipamentos podem prever falhas antes que aconteçam,
+                        reduzindo custos com manutenção corretiva. No varejo, etiquetas RFID e beacons permitem
+                        monitorar o
+                        fluxo de clientes, otimizando o layout das lojas e melhorando a experiência de compra. Em
+                        escritórios e ambientes corporativos, a IoT auxilia no controle de energia, iluminação
+                        inteligente e
+                        segurança, garantindo economia e sustentabilidade.
+                        <br>
+                        <br>
+                        Além disso, a análise de dados gerados por dispositivos IoT oferece insights valiosos para
+                        identificar tendências de consumo, padrões de operação e oportunidades de inovação. Ao integrar
+                        IoT
+                        com sistemas de gestão e nuvem, empresas conseguem centralizar informações, automatizar
+                        processos e
+                        aumentar a produtividade.
+                        <br>
+                        <br>
+                        Para aproveitar ao máximo a IoT, é importante começar com projetos piloto, avaliar o retorno
+                        sobre o
+                        investimento (ROI) e expandir gradualmente, garantindo segurança, privacidade e compatibilidade
+                        com
+                        os sistemas existentes.
+                    </p>
+                </div>
+            </div>
+        </section>
+
+        <footer>
+            <div>
+                <div>
+                    <p>R. da Guia, 142 - Recife, PE, 50030-210</p>
+                    <p>Softex PE</p>
+                    <p>&copy;Todos os direitos reservados</p>
+                </div>
+            </div>
+        </footer>
+    </div>
 </body>
+
 </html>
