--- a/index04.html
+++ b/index04.html
@@ -1,31 +1,46 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>IoT - Futuro do IoT</title>
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <nav>
-            <ul>
-                <li><a href="index.html">1 O que é IoT</a></li>
-                <li><a href="index.html">1.2 Como surgiu</a></li>
-                <li><a href="index02.html" >2 Pra quê serve</a></li>
-                <li><a href="index02.html">2.2 Como usar no seu negócio</a></li>
-                <li><a href="index03.html">3 Aplicação no dia a dia</a></li>
-                <li><a href="#sextenario">4 Futuro do IoT</a></li>
-            </ul>
-        </nav>
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>IoT - Futuro do IoT</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <div class="cabecalho">
+        <div>
+            <h1>Internet das Coisas</h1>
+            <h3>Entenda o que é IoT, descubra como ela surgiu e como você pode
+                aplicar ela na sua empresa e seu cotidiano</h3>
+            <nav>
+                <ul>
+                    <li><a href="index.html">1 O que é IoT</a></li>
+                    <li><a href="index.html">1.2 Como surgiu</a></li>
+                    <li><a href="index02.html">2 Para que serve</a></li>
+                    <li><a href="index02.html">2.2 Como usar no seu negócio</a></li>
+                    <li><a href="index03.html">3 Aplicação no dia a dia</a></li>
+                    <li><a href="#sextenario">4 Futuro do IoT</a></li>
+                    <li><a href="index05.html">5 Referências Bibliográficas</a></li>
+                </ul>
+            </nav>
+        </div>
+    </div>
+
+    <div class="conteudo">
         <section id="s6">
             <div id="sextenario">
                 <div>
                     <h2>Futuro do IoT</h2>
                     <br>
-                    <img src="" alt="Imagem sobre Futuro da IoT">
+                    <img class="imagem" src="/assets/futuro_iot.png" alt="Futuro da IoT">
                     <p>
-                        A Internet das Coisas (IoT) está evoluindo rapidamente e promete transformar ainda mais o nosso cotidiano nos próximos anos. Com a integração de tecnologias emergentes, como 5G, inteligência artificial (IA) e computação em borda (edge computing), a IoT se tornará mais inteligente, eficiente e onipresente.
+                        A Internet das Coisas (IoT) está evoluindo rapidamente e promete transformar ainda mais o nosso
+                        cotidiano nos próximos anos. Com a integração de tecnologias emergentes, como 5G, inteligência
+                        artificial (IA) e computação em borda (edge computing), a IoT se tornará mais inteligente,
+                        eficiente
+                        e onipresente.
                         <br>
                         <br>
                         Principais Tendências para 2025 e Além
@@ -33,38 +48,50 @@
                         <br>
                         1. Integração com Inteligência Artificial (IA)
                         <br>
-                        A combinação da IoT com IA, conhecida como AIoT, permitirá que dispositivos não apenas coletem dados, mas também os analisem e tomem decisões autônomas. Isso resultará em sistemas mais inteligentes e responsivos, capazes de aprender e se adaptar ao comportamento dos usuários. 
+                        A combinação da IoT com IA, conhecida como AIoT, permitirá que dispositivos não apenas coletem
+                        dados, mas também os analisem e tomem decisões autônomas. Isso resultará em sistemas mais
+                        inteligentes e responsivos, capazes de aprender e se adaptar ao comportamento dos usuários.
                         <br>
                         <br>
                         2. Expansão das Redes 5G e 6G
                         <br>
-                        As redes 5G proporcionarão maior velocidade e menor latência, essenciais para aplicações IoT em tempo real, como veículos autônomos e monitoramento remoto de pacientes. Além disso, a pesquisa em redes 6G está em andamento, prometendo conectividade ainda mais rápida e confiável. 
+                        As redes 5G proporcionarão maior velocidade e menor latência, essenciais para aplicações IoT em
+                        tempo real, como veículos autônomos e monitoramento remoto de pacientes. Além disso, a pesquisa
+                        em
+                        redes 6G está em andamento, prometendo conectividade ainda mais rápida e confiável.
                         <br>
                         <br>
                         3. Computação em Borda (Edge Computing)
                         <br>
-                        A computação em borda permite o processamento de dados mais próximo da fonte, reduzindo a latência e a dependência da nuvem. Isso é crucial para aplicações que exigem respostas imediatas, como sistemas de segurança e automação industrial. 
+                        A computação em borda permite o processamento de dados mais próximo da fonte, reduzindo a
+                        latência e
+                        a dependência da nuvem. Isso é crucial para aplicações que exigem respostas imediatas, como
+                        sistemas
+                        de segurança e automação industrial.
                         <br>
                         <br>
                         4. Adoção Generalizada de Dispositivos IoT
                         <br>
-                        Estima-se que o número de dispositivos IoT conectados ultrapasse os 40 bilhões até 2030, abrangendo desde eletrodomésticos inteligentes até sensores industriais. Essa proliferação exigirá soluções robustas de conectividade e segurança. 
+                        Estima-se que o número de dispositivos IoT conectados ultrapasse os 40 bilhões até 2030,
+                        abrangendo
+                        desde eletrodomésticos inteligentes até sensores industriais. Essa proliferação exigirá soluções
+                        robustas de conectividade e segurança.
                         <br>
                         <br>
                         5. Foco em Sustentabilidade e Eficiência Energética
                         <br>
-                        A IoT desempenhará um papel fundamental na promoção da sustentabilidade, com sensores inteligentes monitorando o consumo de energia, detectando desperdícios e otimizando processos para reduzir a pegada de carbono. 
+                        A IoT desempenhará um papel fundamental na promoção da sustentabilidade, com sensores
+                        inteligentes
+                        monitorando o consumo de energia, detectando desperdícios e otimizando processos para reduzir a
+                        pegada de carbono.
                         <br>
                         <br>
-                        A IoT serve como uma ferramenta essencial para conectar o mundo físico ao digital, promovendo automação, eficiência, segurança e inovação em múltiplos setores. Seu uso crescente tem o potencial de transformar profundamente a sociedade, trazendo benefícios tanto para empresas quanto para indivíduos. 
+                        A IoT serve como uma ferramenta essencial para conectar o mundo físico ao digital, promovendo
+                        automação, eficiência, segurança e inovação em múltiplos setores. Seu uso crescente tem o
+                        potencial
+                        de transformar profundamente a sociedade, trazendo benefícios tanto para empresas quanto para
+                        indivíduos.
                     </p>
-                        <!-- Fontes de Referências
-                            Tecnologia IoT em 2025: quais são os avanços tecnológicos?
-                            IoT technology in 2025: Emerging trends and insights - Telnyx
-                            IoT: Tendências e Perspectivas para 2025 - Itshow
-                            Las principales tendencias de IoT en 2025: Innovaciones y futuro
-                            O que o futuro reserva para a Internet das Coisas? - td synnex
-                    -->
                 </div>
             </div>
         </section>
@@ -78,5 +105,7 @@
                 </div>
             </div>
         </footer>
-    </body>
+    </div>
+</body>
+
 </html>
