adição de style e correção de html

--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
         </div>
     </div>
 
-    <div class="conteudo">
-        <section id="s1">
-            <div id="primario">
+    
+        <section id="primario">
+            <div>
                 <div>
-                    <h2>O que é IoT </h2>
-                    <img class="imagem" src="/assets/o_que_e_iot.jpg" alt="O que é IoT">
+                    <h2>O que é IoT</h2>             
+                    <img class="imagem" src="/assets/o_que_e_iot.jpg" alt="O que é IoT">                   
                     <p>
                         O termo IoT, ou Internet das Coisas, refere-se à rede coletiva de dispositivos conectados e à
                         tecnologia que facilita a comunicação entre os dispositivos e a nuvem, bem como entre os
@@ -65,8 +65,8 @@
             </div>
         </section>
 
-        <section id="s2">
-            <div id="secundario">
+        <section id="secundario">
+            <div>
                 <div>
                     <h2>Como surgiu</h2>
                     <p>
@@ -120,7 +120,7 @@
                 </div>
             </div>
         </footer>
-    </div>
+    
 </body>
 
 </html>
