--- a/index02.html
+++ b/index02.html
@@ -29,8 +29,8 @@
     </div>
 
     <div class="conteudo">
-        <section id="s3">
-            <div id="terciario">
+        <section id="terciario">
+            <div>
                 <div>
                     <h2>Para que serve</h2>
                     <img class="imagem" src="/assets/para_que_serve_iot.png" alt="Para que serve IoT">
@@ -86,8 +86,8 @@
             </div>
         </section>
 
-        <section id="s4">
-            <div id="quartenario">
+        <section id="quartenario">
+            <div>
                 <div>
                     <h2>Como usar no seu negócio</h2>
                     <p>
