--- a/index03.html
+++ b/index03.html
@@ -29,8 +29,8 @@
     </div>
 
     <div class="conteudo">
-        <section id="s5">
-            <div id="quintenario">
+        <section id="quintenario">
+            <div>
                 <div>
                     <h2>Aplicação no dia a dia</h2>
                     <p>
@@ -41,57 +41,69 @@
                         nosso cotidiano, proporcionando mais conforto, segurança e eficiência.
                         <br>
                         <br>
+                    </p>
                     <h4>1. Casas Inteligentes</h4>
                     <img class="imagem" src="/assets/casa-inteligente.webp" alt="Casa Inteligente">
                     <br>
+                    <p>
                     A automação residencial é uma das aplicações mais populares da IoT. Dispositivos como termostatos
                     inteligentes, lâmpadas controladas por aplicativo e assistentes virtuais permitem que os moradores
                     controlem a iluminação, temperatura e segurança de suas casas remotamente. Por exemplo, é possível
                     ajustar o ar-condicionado antes de chegar em casa ou acender as luzes com comandos de voz.
+                    </p>
                     <br>
                     <br>
                     <h4>2. Saúde Conectada</h4>
                     <img class="imagem" src="/assets/saude_conectada.jpg" alt="Saude conectada">
                     <br>
+                    <p>
                     Dispositivos vestíveis, como pulseiras e relógios inteligentes, monitoram atividades físicas,
                     batimentos
                     cardíacos e qualidade do sono. Esses dados podem ser compartilhados com profissionais de saúde para
                     acompanhamento remoto, facilitando diagnósticos e tratamentos personalizados.
+                    </p>
                     <br>
                     <br>
                     <h4>3. Mobilidade Urbana</h4>
                     <img class="imagem" src="/assets/mobilidade-urbana.jpg" alt="Mobilidade Urbana">
                     <br>
+                    <p>
                     A IoT também está presente no transporte público e na mobilidade urbana. Sensores em semáforos e
                     vias
                     coletam dados sobre o fluxo de tráfego, permitindo otimizar rotas e reduzir congestionamentos. Além
                     disso, aplicativos de caronas e carros autônomos utilizam a IoT para melhorar a eficiência do
                     transporte.
+                    </p>
                     <br>
                     <br>
                     <h4>4. Agricultura Inteligente</h4>
                     <img class="imagem" src="/assets/agricultura_inteligente.jpg" alt="Agricultura Inteligente">
                     <br>
+                    <p>
                     No campo, a IoT auxilia na agricultura de precisão. Sensores monitoram condições do solo, clima e
                     saúde
                     das plantas, permitindo que os agricultores tomem decisões informadas sobre irrigação, fertilização
                     e
                     colheita. Isso resulta em maior produtividade e sustentabilidade.
+                    </p>
                     <br>
                     <br>
                     <h4>5. Indústria 4.0</h4>
                     <img class="imagem" src="/assets/industria_4.jpg" alt="Indústria 4.0">
                     <br>
+                    <p>
                     Na indústria, a IoT é fundamental para a automação e monitoramento de processos. Sensores em
                     máquinas e
                     equipamentos coletam dados em tempo real, possibilitando manutenção preditiva, aumento da eficiência
                     e
                     redução de custos operacionais.
+                    </p>
                     <br>
                     <br>
                     <h4>6. Cidades Inteligentes</h4>
                     <img class="imagem" src="/assets/cidades_inteligentes.jpg" alt="Cidades Inteligentes">
                     <br>
+                    <p>
                     Cidades estão adotando soluções baseadas em IoT para melhorar a qualidade de vida urbana. Isso
                     inclui
                     sistemas de iluminação pública inteligente, coleta de lixo otimizada e monitoramento ambiental,
