--- a/index04.html
+++ b/index04.html
@@ -29,8 +29,8 @@
     </div>
 
     <div class="conteudo">
-        <section id="s6">
-            <div id="sextenario">
+        <section id="sextenario">
+            <div>
                 <div>
                     <h2>Futuro do IoT</h2>
                     <br>
@@ -43,17 +43,17 @@
                         e onipresente.
                         <br>
                         <br>
-                        Principais Tendências para 2025 e Além
+                        <b>Principais Tendências para 2025 e Além:</b>
                         <br>
                         <br>
-                        1. Integração com Inteligência Artificial (IA)
+                        <b>1.</b> Integração com Inteligência Artificial (IA)
                         <br>
                         A combinação da IoT com IA, conhecida como AIoT, permitirá que dispositivos não apenas coletem
                         dados, mas também os analisem e tomem decisões autônomas. Isso resultará em sistemas mais
                         inteligentes e responsivos, capazes de aprender e se adaptar ao comportamento dos usuários.
                         <br>
                         <br>
-                        2. Expansão das Redes 5G e 6G
+                        <b>2.</b> Expansão das Redes 5G e 6G
                         <br>
                         As redes 5G proporcionarão maior velocidade e menor latência, essenciais para aplicações IoT em
                         tempo real, como veículos autônomos e monitoramento remoto de pacientes. Além disso, a pesquisa
@@ -61,7 +61,7 @@
                         redes 6G está em andamento, prometendo conectividade ainda mais rápida e confiável.
                         <br>
                         <br>
-                        3. Computação em Borda (Edge Computing)
+                        <b>3.</b> Computação em Borda (Edge Computing)
                         <br>
                         A computação em borda permite o processamento de dados mais próximo da fonte, reduzindo a
                         latência e
@@ -70,7 +70,7 @@
                         de segurança e automação industrial.
                         <br>
                         <br>
-                        4. Adoção Generalizada de Dispositivos IoT
+                        <b>4.</b> Adoção Generalizada de Dispositivos IoT
                         <br>
                         Estima-se que o número de dispositivos IoT conectados ultrapasse os 40 bilhões até 2030,
                         abrangendo
@@ -78,7 +78,7 @@
                         robustas de conectividade e segurança.
                         <br>
                         <br>
-                        5. Foco em Sustentabilidade e Eficiência Energética
+                        <b>5.</b> Foco em Sustentabilidade e Eficiência Energética
                         <br>
                         A IoT desempenhará um papel fundamental na promoção da sustentabilidade, com sensores
                         inteligentes
