--- a/index05.html
+++ b/index05.html
@@ -29,8 +29,8 @@
     </div>
 
     <div class="conteudo">
-        <section id="s7">
-            <div id="setenario">
+        <section id="setenario">
+            <div>
                 <div>
                     <h2>Referências Bibliográficas</h2>
                     <br>
