Ajuste no Nav e criação de cards

--- a/index02.html
+++ b/index02.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IoT - Pra quê serve </title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -20,7 +21,7 @@
                     <li><a href="index.html">1.2 Como surgiu</a></li>
                     <li><a href="#terciario">2 Para que serve</a></li>
                     <li><a href="#quartenario">2.2 Como usar no seu negócio</a></li>
-                    <li><a href="index03.html">3 Aplicação no dia a dia</a></li>
+                    <li><a href="index03.html" target="_blank">3 Aplicação no dia a dia</a></li>
                     <li><a href="index04.html">4 Futuro do IoT</a></li>
                     <li><a href="index05.html">5 Referências Bibliográficas</a></li>
                 </ul>
@@ -28,7 +29,7 @@
         </div>
     </div>
 
-    <div class="conteudo">
+    
         <section id="terciario">
             <div>
                 <div>
@@ -137,7 +138,7 @@
                 </div>
             </div>
         </footer>
-    </div>
+    
 </body>
 
 </html>
