--- a/index05.html
+++ b/index05.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IoT - Referências Bibliográficas</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -28,7 +29,7 @@
         </div>
     </div>
 
-    <div class="conteudo">
+    
         <section id="setenario">
             <div>
                 <div>
@@ -125,7 +126,7 @@
                 </div>
             </div>
         </footer>
-    </div>
+   
 </body>
 
 </html>
