--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Internet das coisas</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -18,11 +19,11 @@
                 <ul>
                     <li><a href="#primario">1 O que é IoT</a></li>
                     <li><a href="#secundario">1.2 Como surgiu</a></li>
-                    <li><a href="index02.html">2 Para que serve</a></li>
+                    <li><a href="index02.html" target="_blank">2 Para que serve</a></li>
                     <li><a href="index02.html">2.2 Como usar no seu negócio</a></li>
-                    <li><a href="index03.html">3 Aplicação no dia a dia</a></li>
-                    <li><a href="index04.html">4 Futuro do IoT</a></li>
-                    <li><a href="index05.html">5 Referências Bibliográficas</a></li>
+                    <li><a href="index03.html" target="_blank">3 Aplicação no dia a dia</a></li>
+                    <li><a href="index04.html" target="_blank">4 Futuro do IoT</a></li>
+                    <li><a href="index05.html" target="_blank">5 Referências Bibliográficas</a></li>
                 </ul>
             </nav>
         </div>
@@ -31,9 +32,9 @@
     
         <section id="primario">
             <div>
-                <div>
-                    <h2>O que é IoT</h2>             
-                    <img class="imagem" src="/assets/o_que_e_iot.jpg" alt="O que é IoT">                   
+                <div>             
+                    <img class="imagem" src="/assets/o_que_e_iot.jpg" alt="O que é IoT">   
+                    <h2>O que é IoT</h2>                
                     <p>
                         O termo IoT, ou Internet das Coisas, refere-se à rede coletiva de dispositivos conectados e à
                         tecnologia que facilita a comunicação entre os dispositivos e a nuvem, bem como entre os
