--- a/index03.html
+++ b/index03.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IoT - Aplicação no dia a dia</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -28,10 +29,10 @@
         </div>
     </div>
 
-    <div class="conteudo">
+    
         <section id="quintenario">
             <div>
-                <div>
+                <div class="cards-container">
                     <h2>Aplicação no dia a dia</h2>
                     <p>
                         A Internet das Coisas (IoT) está transformando a maneira como interagimos com o mundo ao nosso
@@ -42,73 +43,123 @@
                         <br>
                         <br>
                     </p>
-                    <h4>1. Casas Inteligentes</h4>
-                    <img class="imagem" src="/assets/casa-inteligente.webp" alt="Casa Inteligente">
-                    <br>
-                    <p>
-                    A automação residencial é uma das aplicações mais populares da IoT. Dispositivos como termostatos
-                    inteligentes, lâmpadas controladas por aplicativo e assistentes virtuais permitem que os moradores
-                    controlem a iluminação, temperatura e segurança de suas casas remotamente. Por exemplo, é possível
-                    ajustar o ar-condicionado antes de chegar em casa ou acender as luzes com comandos de voz.
-                    </p>
-                    <br>
-                    <br>
-                    <h4>2. Saúde Conectada</h4>
-                    <img class="imagem" src="/assets/saude_conectada.jpg" alt="Saude conectada">
-                    <br>
-                    <p>
-                    Dispositivos vestíveis, como pulseiras e relógios inteligentes, monitoram atividades físicas,
-                    batimentos
-                    cardíacos e qualidade do sono. Esses dados podem ser compartilhados com profissionais de saúde para
-                    acompanhamento remoto, facilitando diagnósticos e tratamentos personalizados.
-                    </p>
-                    <br>
-                    <br>
-                    <h4>3. Mobilidade Urbana</h4>
-                    <img class="imagem" src="/assets/mobilidade-urbana.jpg" alt="Mobilidade Urbana">
-                    <br>
-                    <p>
-                    A IoT também está presente no transporte público e na mobilidade urbana. Sensores em semáforos e
-                    vias
-                    coletam dados sobre o fluxo de tráfego, permitindo otimizar rotas e reduzir congestionamentos. Além
-                    disso, aplicativos de caronas e carros autônomos utilizam a IoT para melhorar a eficiência do
-                    transporte.
-                    </p>
-                    <br>
-                    <br>
-                    <h4>4. Agricultura Inteligente</h4>
-                    <img class="imagem" src="/assets/agricultura_inteligente.jpg" alt="Agricultura Inteligente">
-                    <br>
-                    <p>
-                    No campo, a IoT auxilia na agricultura de precisão. Sensores monitoram condições do solo, clima e
-                    saúde
-                    das plantas, permitindo que os agricultores tomem decisões informadas sobre irrigação, fertilização
-                    e
-                    colheita. Isso resulta em maior produtividade e sustentabilidade.
-                    </p>
-                    <br>
-                    <br>
-                    <h4>5. Indústria 4.0</h4>
-                    <img class="imagem" src="/assets/industria_4.jpg" alt="Indústria 4.0">
-                    <br>
-                    <p>
-                    Na indústria, a IoT é fundamental para a automação e monitoramento de processos. Sensores em
-                    máquinas e
-                    equipamentos coletam dados em tempo real, possibilitando manutenção preditiva, aumento da eficiência
-                    e
-                    redução de custos operacionais.
-                    </p>
-                    <br>
-                    <br>
-                    <h4>6. Cidades Inteligentes</h4>
-                    <img class="imagem" src="/assets/cidades_inteligentes.jpg" alt="Cidades Inteligentes">
-                    <br>
-                    <p>
-                    Cidades estão adotando soluções baseadas em IoT para melhorar a qualidade de vida urbana. Isso
-                    inclui
-                    sistemas de iluminação pública inteligente, coleta de lixo otimizada e monitoramento ambiental,
-                    contribuindo para um ambiente mais sustentável e organizado.
-                    </p>
+                    <ul>
+                        <li>
+                            <details class="card">
+                                <summary>
+                                    <h4>1. Casas Inteligentes</h4>
+                                    <img class="imagem" src="/assets/casa-inteligente.webp" alt="Casa Inteligente">
+                                </summary>
+                                    <br>
+                                    <p>
+                                    A automação residencial é uma das aplicações mais populares da IoT. Dispositivos como termostatos
+                                    inteligentes, lâmpadas controladas por aplicativo e assistentes virtuais permitem que os moradores
+                                    controlem a iluminação, temperatura e segurança de suas casas remotamente. Por exemplo, é possível
+                                    ajustar o ar-condicionado antes de chegar em casa ou acender as luzes com comandos de voz.
+                                    </p>
+                                    <br>
+                                    <br>
+                            </details>
+                        </li>
+                    </ul>
+                    <ul>
+                        <li>
+                            <details class="card">
+                                <summary>
+                                    <h4>2. Saúde Conectada</h4>
+                                    <img class="imagem" src="/assets/saude_conectada.jpg" alt="Saude conectada">
+                                </summary>
+                                    <br>
+                                    <p>
+                                    Dispositivos vestíveis, como pulseiras e relógios inteligentes, monitoram atividades físicas,
+                                    batimentos
+                                    cardíacos e qualidade do sono. Esses dados podem ser compartilhados com profissionais de saúde para
+                                    acompanhamento remoto, facilitando diagnósticos e tratamentos personalizados.
+                                    </p>
+                                    <br>
+                                    <br>
+                        </li>
+                        </details>
+                    </ul>
+                    <ul>
+                        <li>
+                            <details class="card">
+                                <summary>
+                                    <h4>3. Mobilidade Urbana</h4>
+                                    <img class="imagem" src="/assets/mobilidade-urbana.jpg" alt="Mobilidade Urbana">
+                                </summary>
+                                    <br>
+                                    <p>
+                                    A IoT também está presente no transporte público e na mobilidade urbana. Sensores em semáforos e
+                                    vias
+                                    coletam dados sobre o fluxo de tráfego, permitindo otimizar rotas e reduzir congestionamentos. Além
+                                    disso, aplicativos de caronas e carros autônomos utilizam a IoT para melhorar a eficiência do
+                                    transporte.
+                                    </p>
+                                    <br>
+                                    <br>
+                            </details>
+                        </li>
+                    </ul>
+                    <ul>
+                        <li>
+                            <details class="card">
+                                <summary>
+                                    <h4>4. Agricultura Inteligente</h4>
+                                    <img class="imagem" src="/assets/agricultura_inteligente.jpg" alt="Agricultura Inteligente">
+                                </summary>
+                                    <br>
+                                    <p>
+                                    No campo, a IoT auxilia na agricultura de precisão. Sensores monitoram condições do solo, clima e
+                                    saúde
+                                    das plantas, permitindo que os agricultores tomem decisões informadas sobre irrigação, fertilização
+                                    e
+                                    colheita. Isso resulta em maior produtividade e sustentabilidade.
+                                    </p>
+                                    <br>
+                                    <br>
+                            </details>
+                        </li>
+                    </ul>
+                    <ul>
+                        <li>
+                            <details class="card">
+                                <summary>
+                                    <h4>5. Indústria 4.0</h4>
+                                    <img class="imagem" src="/assets/industria_4.jpg" alt="Indústria 4.0">
+                                </summary>
+                                    <br>
+                                    <p>
+                                    Na indústria, a IoT é fundamental para a automação e monitoramento de processos. Sensores em
+                                    máquinas e
+                                    equipamentos coletam dados em tempo real, possibilitando manutenção preditiva, aumento da eficiência
+                                    e
+                                    redução de custos operacionais.
+                                    </p>
+                                    <br>
+                                    <br>
+                            </details>
+                        </li>
+                    </ul>
+                    <ul>
+                        <li>
+                            <details class="card">
+                                <summary>
+                                    <h4>6. Cidades Inteligentes</h4>
+                                    <img class="imagem" src="/assets/cidades_inteligentes.jpg" alt="Cidades Inteligentes">
+                                </summary>
+                                    <br>
+                                    <p>
+                                    Cidades estão adotando soluções baseadas em IoT para melhorar a qualidade de vida urbana. Isso
+                                    inclui
+                                    sistemas de iluminação pública inteligente, coleta de lixo otimizada e monitoramento ambiental,
+                                    contribuindo para um ambiente mais sustentável e organizado.
+                                    </p>
+                                    <br>
+                                    <br>
+                            </details>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </section>
@@ -121,7 +172,7 @@
                 </div>
             </div>
         </footer>
-    </div>
+    
 </body>
 
 </html>
