--- a/index04.html
+++ b/index04.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IoT - Futuro do IoT</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -28,7 +29,7 @@
         </div>
     </div>
 
-    <div class="conteudo">
+    
         <section id="sextenario">
             <div>
                 <div>
@@ -105,7 +106,7 @@
                 </div>
             </div>
         </footer>
-    </div>
+    
 </body>
 
 </html>
