--- a/index03.html
+++ b/index03.html
@@ -22,8 +22,8 @@
                     <li><a href="index02.html">2 Para que serve</a></li>
                     <li><a href="index02.html">2.2 Como usar no seu negócio</a></li>
                     <li><a href="#quintenario">3 Aplicação no dia a dia</a></li>
-                    <li><a href="index04.html">4 Futuro do IoT</a></li>
-                    <li><a href="index05.html">5 Referências Bibliográficas</a></li>
+                    <li><a href="index04.html" target="_blank">4 Futuro do IoT</a></li>
+                    <li><a href="index05.html" target="_blank">5 Referências Bibliográficas</a></li>
                 </ul>
             </nav>
         </div>
