--- a/index04.html
+++ b/index04.html
@@ -23,7 +23,7 @@
                     <li><a href="index02.html">2.2 Como usar no seu negócio</a></li>
                     <li><a href="index03.html">3 Aplicação no dia a dia</a></li>
                     <li><a href="#sextenario">4 Futuro do IoT</a></li>
-                    <li><a href="index05.html">5 Referências Bibliográficas</a></li>
+                    <li><a href="index05.html" target="_blank">5 Referências Bibliográficas</a></li>
                 </ul>
             </nav>
         </div>
