Ajuste nas imagens

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <section id="primario">
             <div>
                 <div>             
-                    <img class="imagem" src="/assets/o_que_e_iot.jpg" alt="O que é IoT">   
+                    <img class="imagem" src="assets/o_que_e_iot.jpg" alt="O que é IoT">   
                     <h2>O que é IoT</h2>                
                     <p>
                         O termo IoT, ou Internet das Coisas, refere-se à rede coletiva de dispositivos conectados e à
