--- a/index03.html
+++ b/index03.html
@@ -48,7 +48,7 @@
                             <details class="card">
                                 <summary>
                                     <h4>1. Casas Inteligentes</h4>
-                                    <img class="imagem" src="/assets/casa-inteligente.webp" alt="Casa Inteligente">
+                                    <img class="imagem" src="assets/casa-inteligente.webp" alt="Casa Inteligente">
                                 </summary>
                                     <br>
                                     <p>
@@ -67,7 +67,7 @@
                             <details class="card">
                                 <summary>
                                     <h4>2. Saúde Conectada</h4>
-                                    <img class="imagem" src="/assets/saude_conectada.jpg" alt="Saude conectada">
+                                    <img class="imagem" src="assets/saude_conectada.jpg" alt="Saude conectada">
                                 </summary>
                                     <br>
                                     <p>
@@ -86,7 +86,7 @@
                             <details class="card">
                                 <summary>
                                     <h4>3. Mobilidade Urbana</h4>
-                                    <img class="imagem" src="/assets/mobilidade-urbana.jpg" alt="Mobilidade Urbana">
+                                    <img class="imagem" src="assets/mobilidade-urbana.jpg" alt="Mobilidade Urbana">
                                 </summary>
                                     <br>
                                     <p>
@@ -106,7 +106,7 @@
                             <details class="card">
                                 <summary>
                                     <h4>4. Agricultura Inteligente</h4>
-                                    <img class="imagem" src="/assets/agricultura_inteligente.jpg" alt="Agricultura Inteligente">
+                                    <img class="imagem" src="assets/agricultura_inteligente.jpg" alt="Agricultura Inteligente">
                                 </summary>
                                     <br>
                                     <p>
@@ -126,7 +126,7 @@
                             <details class="card">
                                 <summary>
                                     <h4>5. Indústria 4.0</h4>
-                                    <img class="imagem" src="/assets/industria_4.jpg" alt="Indústria 4.0">
+                                    <img class="imagem" src="assets/industria_4.jpg" alt="Indústria 4.0">
                                 </summary>
                                     <br>
                                     <p>
@@ -146,7 +146,7 @@
                             <details class="card">
                                 <summary>
                                     <h4>6. Cidades Inteligentes</h4>
-                                    <img class="imagem" src="/assets/cidades_inteligentes.jpg" alt="Cidades Inteligentes">
+                                    <img class="imagem" src="assets/cidades_inteligentes.jpg" alt="Cidades Inteligentes">
                                 </summary>
                                     <br>
                                     <p>
