--- a/index04.html
+++ b/index04.html
@@ -35,7 +35,7 @@
                 <div>
                     <h2>Futuro do IoT</h2>
                     <br>
-                    <img class="imagem" src="/assets/futuro_iot.png" alt="Futuro da IoT">
+                    <img class="imagem" src="assets/futuro_iot.png" alt="Futuro da IoT">
                     <p>
                         A Internet das Coisas (IoT) está evoluindo rapidamente e promete transformar ainda mais o nosso
                         cotidiano nos próximos anos. Com a integração de tecnologias emergentes, como 5G, inteligência
